# android_kernel_modules_and_devicetree_oneplus_sm8650

./: .gitattributes
kernel_platform/qcom/proprietary/devicetree/: BUILD.bazel
kernel_platform/qcom/proprietary/devicetree/oplus/: Makefile  enzo-23607-pineapple-overlay.dts  enzo_overlay_common.dtsi  pangu-22111-pineapple-overlay.dts  pangu_overlay_common.dtsi  pineapple_overlay_common.dtsi  platform_map.bzl  waffle-22825-pineapple-overlay-EVB.dts  waffle-22825-pineapple-overlay-EVT1.dts  waffle-22825-pineapple-overlay.dts  waffle-22877-pineapple-overlay-EVB.dts  waffle-22877-pineapple-overlay-EVT1.dts  waffle-22877-pineapple-overlay.dts  waffle_overlay_common.dtsi
kernel_platform/qcom/proprietary/devicetree/oplus/oplus_chg/: oplus-chg-22111-fw.dtsi  oplus-chg-22111.dtsi  oplus-chg-22825-EVB.dtsi  oplus-chg-22825-EVT1.dtsi  oplus-chg-22825-fw.dtsi  oplus-chg-22825.dtsi  oplus-chg-22877-pps.dtsi  oplus-chg-23607-fw.dtsi  oplus-chg-23607.dtsi  oplus-chg-8650.h.dtsi
kernel_platform/qcom/proprietary/devicetree/oplus/oplus_fp/: oplus_fp_22825.dtsi
kernel_platform/qcom/proprietary/devicetree/oplus/oplus_misc/: oplus-misc-22111.dtsi  oplus-misc-22825.dtsi  oplus-misc-22877.dtsi  oplus-misc-23607.dtsi
kernel_platform/qcom/proprietary/devicetree/oplus/sensor/: enzo-sensor-23607.dtsi  (+2 more)
kernel_platform/qcom/proprietary/devicetree/qcom/: kalama-thermal.dtsi  pineapple-coresight.dtsi  pineapple-debug.dtsi  pineapple-mtp.dtsi  pineapple-pcie.dtsi  pineapple-pinctrl.dtsi  pineapple-qupv3.dtsi  pineapple-regulators.dtsi  pineapple.dtsi  pm8550b.dtsi  pmk8550.dtsi
(+25 files in other folders)
